# la-copa-de-la-arboleda

./: .gitignore  AGENTS.md  GENERAR_EXE.bat  JUGAR_LA_COPA.bat  MANUAL_JUGADOR.md  README.md  STATE.md  pyproject.toml
data/world/: interactions.json  objects.json  rooms.json  world.json
docs/: ARCHITECTURE.md  COMMAND_LEXICON.md  CONVENTIONS.md  DATA_FORMAT.md  DECISIONS.md  GAME_DESIGN.md  MASTER_MAP.md  NARRATIVE_STYLE.md  OBJECT_CATALOG.md  PARSER_SPEC.md  PROGRESSION.md  PUZZLE_FLOW.md  REQUIREMENTS_V1.md  ROADMAP.md  ROOM_INDEX.md  RUNBOOK.md  TEST_STRATEGY.md  VISION.md  WORLD_BIBLE.md  WORLD_MODEL.md
scripts/: generate_readme_assets.py
src/game/: __init__.py  __main__.py
src/game/content/: __init__.py  loader.py  validator.py
src/game/engine/: __init__.py  session.py
src/game/model/: __init__.py  core.py
src/game/parser/: __init__.py  core.py  lexicon.py
src/game/persistence/: __init__.py  save_system.py
src/game/shared/: __init__.py  pixel_art.py  runtime.py  screen.py  text.py
tests/: __init__.py  test_content.py  test_parser.py  test_persistence.py  test_runtime_paths.py  test_session.py
